# colorobject

./: CMakeLists.txt  README.md  package.xml
src/discern/: CMakeLists.txt  package.xml
src/discern/include/discern/: color_node.hpp  color_staus.hpp  object_feature.hpp  pnp.hpp
src/discern/launch/: fun.py
src/discern/src/: clolor_node.cpp  object_feature.cpp  pnp.cpp
src/ros2_interfaces/: CMakeLists.txt  package.xml
src/ros2_mindvision_camera/: CMakeLists.txt
